# imshss

./: configure.ac  libtool
config/: cx_dictionary.xml
src/: Makefile.am  hss.c
src/cx_app/: Makefile.am  cxdx_app.h  cxdx_auth.h  cxdx_lir.h  cxdx_mar.c  cxdx_mar.h  cxdx_msgextractor.c  cxdx_msgextractor.h  cxdx_msgvalidation.h  cxdx_sar.c  cxdx_sar.h  cxdx_session.h  cxdx_uar.c
src/db_module/: Makefile.am  cxdx_db.c  cxdx_db.h  cxdx_userprofile.c  cxdx_userprofile.h  db_cxdx_lir.c  db_cxdx_lir.h  db_cxdx_mar.c  db_cxdx_sar.c  db_cxdx_uar.c  db_cxdx_uar.h  db_sh_querycodes.h  db_sh_udr.c  db_sh_udr.h
src/oamps_module/: Makefile.am  hss_oamps.h  oamps_xmlAPI.c  oamps_xmlAPI.h
src/sh_app/: Makefile.am  sh_PUR.h  sh_app.c  sh_msg_api.c  sh_msg_api.h  sh_msgvalidator.c
test/devtest/: dummyUDPServer.c  oampReqSenderTest.c
trunk/config/: db_cx_queries.xml  db_sh_queries.xml  hss_config.xml  sh_dictionary.xml
trunk/docs/: HSS.sql  adv_hss.sql
trunk/src/: .kdbgrc.hss  db_cmd_id.h  events.h  hss.h
trunk/src/cx_app/: Makefile.am  cxdx_app.c  cxdx_auth.c  cxdx_lir.c  cxdx_msg_api.c  cxdx_msg_api.h  cxdx_msgvalidation.c  cxdx_session.c  cxdx_uar.h
trunk/src/db_module/: Makefile.am  db_cxdx_mar.h  db_cxdx_sar.h  db_sh_pur.c  db_sh_pur.h  dbmodule.c  dbmodule.h
trunk/src/oamps_module/: hss_oamps.c
trunk/src/sh_app/: sh_PUR.c  sh_UDR.c  sh_UDR.h  sh_app.h  sh_avps.h  sh_diamretcodes.h  sh_msgvalidator.h
trunk/test/devtest/: builddevtest.sh  interfaceAPI.c  interfaceAPI.h
